home-k8s/adguard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-http
spec:
  selector:
    app.kubernetes.io/name: adguard
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:  
  name: adguard-dns
spec:
  selector:
    app.kubernetes.io/name: adguard
  type: NodePort
  ports:  
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: dns
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: dns
